<resources>
    <string name="app_name">EGSTask</string>
    <string name="name">Name:</string>
    <string name="release_date">Release Date:</string>
    <string name="movie_rating">Movie rating:</string>
    <string name="popularity">Popularity:</string>
    <string name="genres">Genres:</string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="production">Production:</string>
</resources>